4th push (implementing search feature and fetching all users )

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,6 +12,10 @@ android {
     compileSdkVersion 30
     buildToolsVersion "30.0.3"
 
+    dataBinding{
+        enabled =true
+    }
+
     defaultConfig {
         applicationId "com.murad.testauth"
         minSdkVersion 21
