--- a/app/build.gradle
+++ b/app/build.gradle
@@ -100,8 +100,11 @@ dependencies {
         exclude group: 'com.android.support'
     }
 
+
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.1.1'
 
     implementation 'com.facebook.android:facebook-android-sdk:5.15.3'
+
+    implementation 'androidx.work:work-runtime-ktx:2.5.0'
 
 }
